<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/coverOfHeader"
        android:scaleType="centerCrop"
        android:src="@drawable/lol"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="0.0" />
    <!--    android:adjustViewBounds="true"-->
    <!--    android:cropToPadding="true"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/cover"
        app:layout_constraintStart_toStartOf="@id/cover">

        <TextView
            android:id="@+id/nameChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namechannel"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/subscribersChannel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subscribersChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribers"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameChannel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/backAndDetails"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@id/cover"-->
<!--        app:layout_constraintTop_toTopOf="@id/cover">-->

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover">


        <TextView
            android:id="@+id/description"
            style="@style/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/lightBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/whatDescription"
            style="@style/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatDescription"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ImageView
            android:id="@+id/qr"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/qr"
            android:src="@drawable/qr"
            app:layout_constraintBottom_toBottomOf="@+id/link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/link" />

        <TextView
            android:id="@+id/link"
            style="@style/des.link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/qr"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whatDescription" />

        <TextView
            android:id="@+id/inviteLink"
            style="@style/des.link.invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitelink"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inviteLink"

            />

        <TextView
            android:id="@+id/notification"
            style="@style/des.link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/on"
            style="@style/des.link.invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notificationState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:src="@drawable/qr"
            app:layout_constraintBottom_toBottomOf="@+id/notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notification"
            app:thumbTint="#1E2633"
            app:trackTint="@color/lightBlue" />

        <View
            android:id="@+id/line3"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="@+id/notificationState"
            app:layout_constraintEnd_toStartOf="@id/notificationState"
            app:layout_constraintTop_toTopOf="@id/notificationState" />

        <View
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/on"

            />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lin2"
            app:tabIconTint="@color/Gray"
            app:tabIndicatorColor="@color/lightBlue"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabSelectedTextColor="@color/lightBlue"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/lightGray" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>
